# webgame

./: .gitignore  CMakeLists.txt  Content.cmake  LICENSE  README.md
app/: CMakeLists.txt  main.c  main.cpp
src/: webgame.h
src/base/: CMakeLists.txt  base.c  base.h  data.cpp  data.h  object.cpp  object.h  resource.c  resource.h  tree.c  tree.h
src/render/: CMakeLists.txt  app.cpp  app.h  file_mesh.h  geometry.h  mesh.cpp  mesh.h  render.c  render.h  render_error.h
src/script/: CMakeLists.txt  script.h
src/script/base/: vec.h
